added some updates

--- a/events.html
+++ b/events.html
@@ -161,7 +161,7 @@
             <h1><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a> </h1>
             <h3 style="font-size: 2vw; text-align: center; background-color: #8970c8ff;">
                 <a href="./team">ABOUT US</a> 
-                <a href="./events">PAST EVENTS</a>
+                <a href="./events">EVENTS</a>
                 <a href="./news">NEWS</a>
                 <a href="./contact">CONTACT US</a>
             </h3>
@@ -366,7 +366,9 @@
 
                 <h3> <b>Leslie Kemp</b>, <a href = "https://www.socialistalternative.org/author/leslie-kemp/">Socialist Alternative</a></h3>
             <p>
-                Check back later for Leslie Kemp’s updated bio!
+                Leslie Kemp is the women's organizer for Socialist Alternative Canada. She has been a lifelong activist. She was the key organizer of an activist school 
+                in BC in the 1990s: the Community Development Institute.  From 2012-2015 she coordinated a program for Inuit school community councillors working in schools
+                 across Nunavut. She has also worked on the board of the Community Arts Council, who was engaged in community arts in the downtown Eastside.
 
     
                 </p>
