--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
     <div class="grid-container">
 
         <div class="item1">
-            <h1 style="font-size: 4vw; text-align: center; "><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a></h1>
+            <h1 style="font-size: 2vw; text-align: center; "><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a></h1>
             <h3 style="font-size: 2vw; text-align: center; background-color: #8970c8ff;">
                 <a href="./team">ABOUT US</a> 
-                <a href="./events">PAST EVENTS</a>
+                <a href="./events">EVENTS</a>
                 <a href="./news">NEWS</a>
                 <a href="./contact">CONTACT US</a>
             </h3>
