--- a/team.html
+++ b/team.html
@@ -158,7 +158,7 @@
             <h1 ><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a> </h1>
             <h3 style="font-size: 2vw; text-align: center; background-color: #8970c8ff;">
                 <a href="./team">ABOUT US</a> 
-                <a href="./events">PAST EVENTS</a>
+                <a href="./events">EVENTS</a>
                 <a href="./news">NEWS</a>
                 <a href="./contact">CONTACT US</a>
             </h3>
@@ -167,8 +167,8 @@
         </div>
 
         <div class = "item2">
-            <img src="pictures/yas_1good.webp" alt="This is a headshot photo of the International Women’s Day Vancouver Committee chair, Yasmin.">
-            <p> <b>Yasmin (she/her) </b> <br> 
+            <img src="pictures/yas_edited.JPG" alt="This is a headshot photo of the International Women’s Day Vancouver Committee chair, Yasmin.">
+            <p> <b>Yasmin Simsek(she/her) </b> <br> 
                 Chair <br>
                 Yasmin is an author, actor and activist. Her full time job is currently working with the North Shore Women's Centre to provide gender based violence 
                 reduction program to high schools around BC. Her creative endeavours, be it writing children's books or theatre, are all focused around representation 
@@ -185,7 +185,7 @@
 
         <div class = "item3">
             <img src="pictures/Megan1.webp" alt="This is a headshot photo of the International Women’s Day Vancouver Committee vice chair, Megan.">
-            <p> <b>Megan (she/her) </b> <br>
+            <p> <b>Megan Bobetsis(she/her) </b> <br>
                 Vice-Chair <br>
                 Megan completed her MA in Gender, Sexuality & Women's Studies from SFU in 2022. Since graduating, Megan worked on the project team tasked with reimagining the Gender Clinic at BC Children's Hospital, and currently works with the Harm Reduction team at the BC Centre for Disease Control. 
                 <br>
@@ -199,8 +199,8 @@
         </div>
 
         <div class = "item4">
-            <img src="pictures/oreofe_1good.webp" alt="This is a headshot photo of the International Women’s Day Vancouver Committee Administrative Director, Oreofeoluwa">
-            <p> <b>Oreofeoluwa (she/her) </b> <br>
+            <img src="pictures/oreofe_edited.JPG" alt="This is a headshot photo of the International Women’s Day Vancouver Committee Administrative Director, Oreofeoluwa">
+            <p> <b>Oreofeoluwa Adeyonu(she/her) </b> <br>
                 Administrative Director <br>
                 Oreofeoluwa has a bachelor's degree in International relations and diplomacy followed by a masters degree in gender, sexuality and 
                 women's studies. Oreofeoluwa currently works as the Lead Researcher and Project Coordinator - gender based violence prevention in high 
@@ -219,8 +219,8 @@
         </div>
 
         <div class = "item5">
-            <img src = "pictures/gulche_1good.webp" alt="This is a headshot photo of the International Women’s Day Vancouver Committee operations director, Gülce" >
-            <p> <b>Gülce (she/her)</b> <br>
+            <img src = "pictures/gulche_edited.JPG" alt="This is a headshot photo of the International Women’s Day Vancouver Committee operations director, Gülce" >
+            <p> <b>Gülce Özker(she/her)</b> <br>
                 Operations Director<br>
                 Gülce is currently completing her MA in Developmental Psychology at SFU, focusing on how the community contributes to child and 
                 family well-being. She has also worked with parents and children from underrepresented immigrant groups to support their journey 
@@ -241,8 +241,8 @@
         </div>
 
         <div class = "item6">
-            <img src = "pictures/karissa1.webp" alt="This is a headshot photo of the International Women’s Day Vancouver Committee director of public relations, Karissa." >
-            <p> <b>Karissa (she/her)</b> <br>
+            <img src = "pictures/karissa_editted.JPG" alt="This is a headshot photo of the International Women’s Day Vancouver Committee director of public relations, Karissa." >
+            <p> <b>Karissa Ketter(she/her)</b> <br>
                 Public Relations Director<br>
                 Karissa is currently completing her BA in International Studies at SFU with a focus on global politics, culture, and society. 
                 She is passionate about community activism, equity and sustainability measures, and awareness for the numerous issues that women 
@@ -289,9 +289,7 @@
                  the Canadian or BC government have the legal or moral authority to govern. We recognize that these communities are the original caretakers and stewards over
                   the lands and waters that we occupy. 
                   <br>
-                  <br>
-                  <br>
-                  <br>
+                 
                   <br>
                   This committee is dedicated to supporting the different strategies that Indigenous peoples are using to protect their land and their communities, and we 
                   commit to dedicating time and resources to working in solidarity. Specifically, our committee recognizes the
@@ -315,6 +313,11 @@
                    This committee is dedicated to uplifting the voices of Indigenous women and two-spirit folks in British Columbia. We are privileged to settle on these 
                    lands and aim to use our time here to actively create space and uplift Indigenous communities. We encourage all settlers of this land to continue the 
                    ongoing process of education on Indigenous history and contemporary challenges and championing the 94 Calls to Action. 
+                   <br>
+                   <br>
+                   The Vancouver IWD committee members are first, second, and third-generation settlers of this land. Our ancestry includes Turkish, Danish, English,
+                    Norwegian, Han-Chinese, Yoruba & Igarra, Nigerian, Greek, and German. We are now privileged and honoured to call these unceded lands home. Some of 
+                    our members were born on these lands, and others have been living here since 2021.
 
 
             </p>
