--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
             <h1><a href="./index">INTERNATIONAL WOMEN'S DAY MARCH<br/>VANCOUVER</a> </h1>
             <h3 style="font-size: 2vw; text-align: center; background-color: #8970c8ff;">
                 <a href="./team">ABOUT US</a> 
-                <a href="./events">PAST EVENTS</a>
+                <a href="./events">EVENTS</a>
                 <a href="./news">NEWS</a>
                 <a href="./contact">CONTACT US</a>
             </h3>
