--- a/index.html
+++ b/index.html
@@ -71,10 +71,17 @@
         .item10 {
             grid-area: left2;
         } 
+        .item12 {
+            grid-area: right3;
+        } 
         .item11 {
             grid-area: footer;
             background-color: #8e7cc3ff;
         }
+
+        .item13 {
+            grid-area: right4;
+        } 
 
         .grid-container {
             display: grid;
@@ -83,7 +90,8 @@
                 'left0 left0 center0 right0 right0'
                 'left1 left1 center1 right1 right1'
                 'left1 left1 right2 right2 right2'
-                'left2 left2   .       .      .'
+                'left2 left2   .  .       .'
+                'right3 right3   right4  .       .'
                 'footer footer footer footer footer';
 
             gap: 2%;
@@ -220,6 +228,21 @@
             <img src="pictures/miniwomen1.webp" alt="This is an illustration of four women. The four women have diverse skin tones, hair colours, hairstyles, and shirt colours. They are illustrated to be all facing to the left and their heads are slightly overlapping.">
         </div>
 
+        <div class = "item12"> 
+            <h2> In partnership with: </h2>
+            <img src = "pictures/Simon Fraser Student Society Women's Centre.png" alt = "This is the logo for the Simon Fraser Student Society Women's Centre" style="width: 50%; height: auto;">
+            
+
+        </div>
+
+        <div class = "item13"> 
+            <h2> Sponsored by: </h2>
+            <img src = "pictures/SFU_Gender_Sexual_Womens_Study_informal_logo_horz_RGB.png" alt = "This is the logo for the Simon Fraser gender, sexuality and women's studies" style="width: 100%; height: auto;">
+            <img src = "pictures/Sexual Violence Support Prevention Office_rgb.png" alt = "This is the logo for the Simon Fraser sexual violence support and prevention office" style="width: 80%; height: auto; padding-left: 11px;">
+            <img src = "pictures/SFU Logo.png" alt = "This is the logo for the Simon Fraser University" style="width: 50%; height: auto; padding-left: 25px; padding-top: 25px;">
+
+        </div>
+
         <div class="item11">
             <p style="text-align: right; font-size: small; color:#321f4c">We acknowledge that we are located on the Unceded Coast 
                 Salish Territories of the xʷməθkʷəy̓əm (Musqueam), Səl̓ílwətaʔ/<br>
@@ -233,6 +256,8 @@
             <a href="https://www.facebook.com/profile.php?id=100090451010747&mibextid=LQQJ4d"><img src="pictures/facebook.webp" alt="mini facebook link" style="width: 2%; height: auto;"></a>
             <a href="https://linktr.ee/iwdvancouver"><img src = "pictures/link.webp" alt = "link to all our websites social media's" style = "width: 2%; height: auto; "></a>
         </div>
+
+
     </div>
 
     <script>
