--- a/team.html
+++ b/team.html
@@ -55,12 +55,15 @@
         }
         .item8 {grid-area: footer;
         background-color: #8e7cc3ff;}
+        .item10 {grid-area: pre1;
+        }
 
 
         .grid-container{
             display: grid;
             grid-template-areas: 
             'header header header '
+            'pre1      pre1     pre1'
             'left0  center0 right0 '
             'left1  center1  right1'
             'center2 center2 center2'
@@ -106,6 +109,7 @@
                 grid-template-columns: 1fr;
                 grid-template-areas: 
                 'header'
+                'pre1'
                 'left0'
                 'center0'
                 'right0'
@@ -184,7 +188,7 @@
         </div>
 
         <div class = "item3">
-            <img src="pictures/Megan1.webp" alt="This is a headshot photo of the International Women’s Day Vancouver Committee vice chair, Megan.">
+            <img src="pictures/megan_edited.JPG" alt="This is a headshot photo of the International Women’s Day Vancouver Committee vice chair, Megan.">
             <p> <b>Megan Bobetsis(she/her) </b> <br>
                 Vice-Chair <br>
                 Megan completed her MA in Gender, Sexuality & Women's Studies from SFU in 2022. Since graduating, Megan worked on the project team tasked with reimagining the Gender Clinic at BC Children's Hospital, and currently works with the Harm Reduction team at the BC Centre for Disease Control. 
@@ -261,7 +265,7 @@
         </div>
 
         <div class = "item7">
-            <img src = "pictures/spencer1.jpeg" alt="This is a headshot photo of the International Women’s Day Vancouver Committee director of content, spencer" >
+            <img src = "pictures/spence_edited.JPG" alt="This is a headshot photo of the International Women’s Day Vancouver Committee director of content, spencer" >
             <p> <b>spencer lee 李丹彤 (they/them/佢keoi5) </b> <br>
                 Content Director <br>
                 spencer is a first-generation Han Chinese-Canadian settler living on traditional, unceded, stolen lands of the Skwxwú7mesh (Squamish), Səl̓ílwətaʔ/Selilwitulh 
@@ -278,6 +282,13 @@
                 
 
             </p>
+
+        </div>
+
+        <div class = "item10">
+
+            <img src = "pictures/grouphoto.webp" alt="This is a group photo of the International Women’s Day Vancouver Committee" style="width: 70%; height: auto; padding-left: 14vw;" >
+            
 
         </div>
 
