--- a/events.html
+++ b/events.html
@@ -56,6 +56,10 @@
         }
         .item12 {grid-area: left9;
         }
+        .item14 {grid-area: pre1;
+        }
+        .item15 {grid-area: pre2;
+        }
         .item13 {grid-area: footer;
         background-color: #8e7cc3ff;}
 
@@ -65,6 +69,8 @@
             display: grid;
             grid-template-areas: 
             'header header header '
+            'pre2    pre2   pre2'
+            'pre1     pre1   pre1'
             'left0  center0 left4 '
             'left1  center0  left5'
             'left2  center0 left6'
@@ -108,6 +114,8 @@
                 grid-template-columns: 1fr;
                 grid-template-areas:
                 'header'
+                'pre2'
+                'pre1'
                 'center0'
                 'left0'
                 'left1'
@@ -165,13 +173,41 @@
                 <a href="./news">NEWS</a>
                 <a href="./contact">CONTACT US</a>
             </h3>
+                
+        </div>
+
+        <div class = "item14">
+            <br>
+            <h1 style="font-size: 3vw; text-align: center;">2023 Speaker’s Lineup & Biographies:</h1>
+            <br>
+            <p>The IWD March was held at at the šxʷƛ̓ənəq Xwtl'e7énḵ Square (Vancouver Art Gallery, North Plaza) on 
+                March 5th, 2023. The event garnered great community support as participants listened to the following 
+                panel of speakers. After these speeches, we joined together to march around the Vancouver Art Gallery. </p>
+            <br>
+        </div>
+
+        <div class = "item15">
+            <br>
+            <h1 style="font-size: 3vw; text-align: center;">2024 Speaker’s Lineup & Biographies:</h1>
+            <br>
+            <ul style="font-size: 1vw; text-align: center; list-style-position: inside;">
+
+                <li>Indigenous welcome ceremony from xʷməθkʷəy̓əm (Musqueam) Knowledge Keeper Debra Sparrow</li>
                 <br>
-                <h1 style="font-size: 3vw; text-align: center;">2023 Speaker’s Lineup & Biographies:</h1>
+                <li>Gunreet Sethi from Voices for Hope</li>
                 <br>
-                <p>The IWD March was held at at the šxʷƛ̓ənəq Xwtl'e7énḵ Square (Vancouver Art Gallery, North Plaza) on 
-                    March 5th, 2023. The event garnered great community support as participants listened to the following 
-                    panel of speakers. After these speeches, we joined together to march around the Vancouver Art Gallery. </p>
+                <li>Anoop Gill from QMUNITY </li>
                 <br>
+                <li>Evelyn Huntjens from Pacific DAWN</li>
+                <br>
+                <li>Performance from Solidarity Notes Labour Choir</li>
+                <br>
+                <li>Performance by Vancouver dance group, Butterflies in Spirit</li>
+                <br>
+                <li>Full speaker’s biographies coming soon! </li>
+                <br>
+                
+            </ul>
         </div>
 
 
