--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
                 <li>International Women's Day: March 8th, 2024</li>
                 <br>
                 
-                <li>2024 speakers list coming soon!</li>
+                <li><a href = "./events"> 2024 speakers list has been announced! </a> </li>
+                
             </ul>
         </div>
 
