--- a/team.html
+++ b/team.html
@@ -163,9 +163,9 @@
                 <a href="./contact">CONTACT US</a>
             </h3>
                 <br>
-            <h3 style="font-size: 2.5vw; text-align: center; color: #321f4c; ">Vancouver Committee</h3>
+            <!-- <h3 style="font-size: 2.5vw; text-align: center; color: #321f4c; ">Vancouver Committee</h3>-->
         </div>
-
+        <!--
         <div class = "item2">
             <img src="pictures/yas_1good.webp" alt="yasmin">
             <p> <b>Yasmin (she/her) </b> <br> 
@@ -281,7 +281,7 @@
 
         </div>
 
-        <div class = "item9">
+        <div class = "item9">-->
             <h3> <b>Land Acknowledgement </b> </h3>
             <p>We acknowledge that the Vancouver International Women’s Day committee is located on the Unceded Coast Salish Territories of the xʷməθkʷəy̓əm (Musqueam),
                  Səl̓ílwətaʔ/Selilwitulh (Tsleil-Waututh), Kwikwitlem (Coquitlam), Kwantlen, Katzie, Semiahmoo, and Skwxwú7mesh Úxwumixw (Squamish) Peoples. Unceded means 
