--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                 <div class="slides fade">
                     <div class="numbertext"></div>
-                    <img src="pictures/DSC04727.webp" alt = "This photo is of the committee chair, Yasmin Simsek, at the 2023 Vancouver International Women’s Day march. She is standing on a large platform of stone stairs. She is standing in front of a microphone, reading off of paper to an audience. Behind her, is a large purple banner that reads International Women’s Day. She is wearing a black pant suit, with a purple shirt underneath. 
+                    <img src="pictures/DSC04727.webp" alt = "This photo is of the committee chair, at the 2023 Vancouver International Women’s Day march. She is standing on a large platform of stone stairs. She is standing in front of a microphone, reading off of paper to an audience. Behind her, is a large purple banner that reads International Women’s Day. She is wearing a black pant suit, with a purple shirt underneath. 
 
                     "style="width:100%">
                 </div>
@@ -225,7 +225,7 @@
 
         <div class="item6">
             <p>"We have the human right to protest here and with so many injustices worldwide, isn't it our duty to do what others aren't able to do - what others have been imprisoned for?"</p>
-            <p align="right"> - Yasmin Vejs Simsek,<br> IWD Vancouver Chair</p>    
+            <p align="right"> - IWD Vancouver Chair</p>    
         </div>
 
         <div class="item9">
