--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
         </div>
 
         <div class = "item13"> 
-            <h2> Sponsored by: </h2>
-            <img src = "pictures/SFU_Gender_Sexual_Womens_Study_informal_logo_horz_RGB.png" alt = "This is the logo for the Simon Fraser gender, sexuality and women's studies" style="width: 100%; height: auto;">
-            <img src = "pictures/Sexual Violence Support Prevention Office_rgb.png" alt = "This is the logo for the Simon Fraser sexual violence support and prevention office" style="width: 80%; height: auto; padding-left: 11px;">
+            <!--<h2> Sponsored by: </h2>-->
+           <!-- <img src = "pictures/SFU_Gender_Sexual_Womens_Study_informal_logo_horz_RGB.png" alt = "This is the logo for the Simon Fraser gender, sexuality and women's studies" style="width: 100%; height: auto;">-->
+            <!--<img src = "pictures/Sexual Violence Support Prevention Office_rgb.png" alt = "This is the logo for the Simon Fraser sexual violence support and prevention office" style="width: 80%; height: auto; padding-left: 11px;">-->
 
         </div>
 
