updated speaker list

--- a/events.html
+++ b/events.html
@@ -192,18 +192,22 @@
             <br>
             <ul style="font-size: 1vw; text-align: center; list-style-position: inside;">
 
-                <li>Indigenous welcome ceremony from xʷməθkʷəy̓əm (Musqueam) Knowledge Keeper Debra Sparrow</li>
+                <li>Elder Debra Sparrow</li>
                 <br>
-                <li>Gunreet Sethi from Voices for Hope</li>
+                <li>Youth for Palestine</li>
                 <br>
              
-                <li>Evelyn Huntjens from Pacific DAWN</li>
+                <li>Performance by Butterflies in Spirit</li>
                 <br>
-                <li>Performance from Solidarity Notes Labour Choir</li>
+                <li>Voices for Hope</li>
                 <br>
-                <li>Performance by Vancouver dance group, Butterflies in Spirit</li>
+                <li>Indigenous Women Rise Society</li>
                 <br>
-                <li>Full speaker’s biographies coming soon! </li>
+                <li>Iranian-Canadian Physicians of BC</li>
+                <br>
+                <li>Pacific DAWN</li>
+                <br>
+                <li>Performance by Solidarity Notes</li>
                 <br>
                 
             </ul>
