fixed photos hopefully

--- a/events.html
+++ b/events.html
@@ -241,7 +241,7 @@
         </div>
 
         <div class = "item6">
-            <img src = "pictures/choir.jpg " alt = "This is a photo of the Solidarity Notes, singing at the 2023 event. They are standing in two rows on large stone stairs. There are multiple microphones in front of them" style = " height: auto; "></a>
+            <img src = "pictures/choir.webp " alt = "This is a photo of the Solidarity Notes, singing at the 2023 event. They are standing in two rows on large stone stairs. There are multiple microphones in front of them" style = " height: auto; "></a>
             <p style="text-align: center; font-style: italic; font-size: 14px; margin-top: 10px;">
                 Solidarity Notes
             </p>
