--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
         <div class = "item12"> 
             <h2> In partnership with: </h2>
-            <img src = "pictures/Simon Fraser Student Society Women's Centre.png" alt = "This is the logo for the Simon Fraser Student Society Women's Centre" style="width: 50%; height: auto;">
+            <img src = "pictures/Simon Fraser Student Society Women's Centre.webp" alt = "This is the logo for the Simon Fraser Student Society Women's Centre" style="width: 50%; height: auto;">
             
 
         </div>
