--- a/team.html
+++ b/team.html
@@ -167,9 +167,9 @@
                 <a href="./contact">CONTACT US</a>
             </h3>
                 <br>
-            <h3 style="font-size: 2.5vw; text-align: center; color: #321f4c; ">Vancouver Committee</h3>
+            <!-- <h3 style="font-size: 2.5vw; text-align: center; color: #321f4c; ">Vancouver Committee</h3>-->
         </div>
-
+        <!--
         <div class = "item2">
             <img src="pictures/yas_edited.JPG" alt="This is a headshot photo of the International Women’s Day Vancouver Committee chair, Yasmin.">
             <p> <b>Yasmin Simsek(she/her) </b> <br> 
