readded instagram widget

--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,8 @@
 
         <div class="item5">
             <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-            <div class="elfsight-app-41c369d4-9e19-4321-bcc6-e349b6245810" data-elfsight-app-lazy></div>
+            <div class="elfsight-app-51c4cc1f-7d82-4fb2-868d-dc2b2da508e6" data-elfsight-app-lazy></div>
+            <!--instagram widget-->
         </div>
 
         <div class="item6">
