--- a/events.html
+++ b/events.html
@@ -192,7 +192,7 @@
             <br>
             <ul style="font-size: 1vw; text-align: center; list-style-position: inside;">
 
-                <li>Elder Debra Sparrow</li>
+                <li>Indigenous Elder Welcome Ceremony</li>
                 <br>
                 <li>Youth for Palestine</li>
                 <br>
@@ -205,7 +205,7 @@
                 <br>
                 <li>Iranian-Canadian Physicians of BC</li>
                 <br>
-                <li>Pacific DAWN</li>
+                <li>DAWN</li>
                 <br>
                 <li>Performance by Solidarity Notes</li>
                 <br>
